--- a/install.txt
+++ b/install.txt
@@ -4,6 +4,7 @@ npm install express ejs --save
 npm install sequelize
 npm install sequelize-cli -D
 npm install mysql2
+npm install axios
 npm install --save sequelize
 npx sequelize init:models (cria pas models)
 
